Writing preface, postface

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -18,9 +18,16 @@ categories:
 
 > *- matz*
 
-## 本書の対象読者
 
-本書ではWebアプリケーションがどういうものなのか、何ができるのか、どのような仕組みで動いているのかを説明していきます。
+ブラウザを使って買い物をする、SNSを読み書きする、料理のレシピを検索する。インターネット上のWebアプリは私たちの生活に深く根ざしています。それらを使うだけではなくて、どうやって動いているか知りたい、自分でも作ってみたい。本書はそんな想いを叶えるための第一歩を踏み出すための本です。
+
+## 本書の目的
+
+本書の目的の1つはWebアプリ作成のための便利なフレームワーク Ruby on Rails (以下、Railsと略します)を使って、写真や文書を投稿できるミニブログアプリを題材に実際に作って動かし、その仕組みを学ぶことです。Webアプリケーションがどういうものなのか、何ができるのか、どのような仕組みで動いているのかを説明していきます。できるだけ簡単なサンプルアプリを用意し、その仕組みを説明することで、RailsおよびWebアプリの基礎を説明していきます。
+
+また、本書の目的のもう1つは、世の中にあるたくさんの情報を読むために前提となる基礎知識を身につけることです。Railsを学ぶための良い資料として、[RailsGuides](http://railsguides.jp/) や [RailsTutorial](http://railstutorial.jp/) があります。本書を読み進めると、これらの資料を読み進めるための基礎知識が身についてきます。実践的なRailsアプリを作るために必要なさまざまな資料を読むための入り口として本書はあります。
+
+## 本書の対象読者
 
 本書が対象としている読者は以下のような方々です。
 
@@ -28,11 +35,7 @@ categories:
 - Webプログラミングは初めてである
 - Railsプログラミングは初めてである
 
-プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した2年間の一橋大学社会学部での講義資料をもとに書いています。講義はプログラミングは初経験である学生が多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
-
-本書の目的の1つは写真や文書を投稿できるミニブログアプリを題材に、Railsアプリを実際に作って動かし、その仕組みを学ぶことです。できるだけ簡単なサンプルアプリを用意し、その仕組みを説明することで、RailsおよびWebアプリの基礎を説明していきます。
-
-また、本書の目的のもう1つは、世の中にあるたくさんの情報を読むための基礎知識を身につけることです。Railsを学ぶための良い資料として、[RailsGuides](http://railsguides.jp/) や [RailsTutorial](http://railstutorial.jp/) があります。本書を読み進めると、これらの資料を読み進めるための基礎知識が身についてきます。実践的なRailsアプリを作るために、これらの資料は大きな助けになるでしょう。
+プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した2年間の一橋大学社会学部での講義資料をもとに書いています。講義はプログラミングは初めてである学生さんが多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
 
 プログラミングの世界、Webの世界は広大です。本書ではHTML（ブラウザで表示するための言語）とCSS（HTMLと一緒に使う、装飾するための言語）については最低限の説明のみにとどめています。HTMLとCSSについて学びたい方は、たとえば以下の情報が分かり易いです。
 
@@ -50,7 +53,7 @@ categories:
   - 著: 清水 亮
   - ISBN: 978-4-12-150489-0
 
-もしもあなたが他の言語でプログラミングをした経験があれば、これも大きなアドバンテージです。特にjavascriptの経験がある方は、本書の知識をつかってインタラクティブで格好良いWebアプリを作ることができるようになるでしょう。Rubyistの方は、本書の内容を越えた範囲について、いままでの知識をつかって早く成長することができるでしょう。
+もしもあなたが他の言語でプログラミングをした経験があれば、これも大きなアドバンテージです。特にJavaScript(ブラウザ上で広く使われているプログラミング言語)の経験がある方は、本書の知識をつかってインタラクティブで格好良いWebアプリを作ることができるようになるでしょう。(本書ではJavaScriptについては説明しません。) Rubyの経験がある方は、本書の内容を越えた範囲について、いままでの知識をつかって早く成長することができるでしょう。
 
 逆に、本書の対象から外れるのは以下のような方です。
 
@@ -81,11 +84,13 @@ end
 -, + 印が付いている場合はその行について変更を行うことを示します。（-, + がついていない部分はそのままです） - で始まる行を削除し、+ で始まる行を追加してください。
 
 ### ターミナルコマンドの書式例
+
 ```bash
 rails server
 ```
 
 ### ターミナルの実行結果の書式例
+
 ```console
 $ rails server
 => Booting Puma
@@ -200,7 +205,7 @@ $ gem install rails
 
 Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで簡単に環境を構築することができます。インストーラをダウンロードして実行してください。
 
-※2016年2月現在の最新パッケージは、Ruby2.2.4, Rails4.2 という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
+※2016年2月現在の最新パッケージは、Ruby2.2.4, Rails4.2 という構成になっています。本書のコードはデフォルトのRailsInstallerの環境でも動作します。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
 プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atom は無料で利用することができます。(ライセンスは MIT ライセンスです。)
 
