--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -19,7 +19,7 @@ categories:
 > *- matz*
 
 
-ブラウザを使って買い物をする、SNSを読み書きする、料理のレシピを検索する。インターネット上のWebアプリは私たちの生活に深く根ざしています。それらを使うだけではなくて、どうやって動いているか知りたい、自分でも作ってみたい。本書はそんな想いを叶えるための第一歩を踏み出すための本です。
+ブラウザを使って買い物をする、SNSを読み書きする、料理のレシピを検索する。インターネット上のWebアプリは私たちの生活に深く根ざしています。それらを使うだけではなくて、どうやって動いているか知りたい、自分でも作ってみたい。本書はそんな想いを叶えるための第一歩を踏み出すための資料です。
 
 ## 本書の目的
 
