Writing summary on model and gem pages

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -239,9 +239,41 @@ DB設計図(migration)からDBを作るのが `rails db:migrate` コマンドで
 
 ### モデルの使い方
 
-![モデルの使い方](assets/model/kn/summary_model1.png)
+```ruby
+book = Book.new(title: "ハチミツとクローバー",
+                memo: "美大を舞台にした青春ラブコメ")
+```
 
-![モデルの使い方 つづき](assets/model/kn/summary_model2.png)
+Book.new でBook Model オブジェクトを作ります。モデル名は英語の単数形にするルールがあります。引数でtitle, modelといった各カラムのデータを渡せます。
+
+```ruby
+book.save
+```
+
+saveメソッドを呼ぶと保存できます。
+
+```ruby
+books = Book.all.to_a
+```
+
+Book.all でDBに保存されているBook Model の全データを取得できます。Book.all.to_a を実行すると、ArrayにBookオブジェクトが詰まって返ってきます。
+
+```ruby
+book = Book.where(title: "ハチミツとクローバー")
+book.title #=> "ハチミツとクローバー"
+book.memo #=> "美大を舞台にした青春ラブコメ"
+```
+
+whereメソッドを使うと検索ができます。タイトルが"ハチミツとクローバー"であるBookオブジェクトが返ります。検索で取れたBookオブジェクトは、titleメソッドでタイトルを、memoメソッドでメモをそれぞれ取得できます。
+
+### ポイントまとめ
+
+ポイントをまとめると以下のようになります。
+
+- DBはデータの保存、読み込み、検索に特化したプログラム。
+- モデルはDBを便利に使うための道具。DBとモデルはセットで使われる。
+- マイグレーション(migration)ファイルはDBを作るための設計図
+- rails db:migrate はマイグレーションファイルからDBを作るコマンド
 
 ## さらに学びたい場合は
 
