--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -154,3 +154,15 @@ gem 'coffee-rails', '~> 4.1.0'
 ある用途のGemで定番のものを探したい場合は、 ["The Ruby Toolbox"](https://www.ruby-toolbox.com/) というサイトが便利です。カテゴリーごとに、その用途のGemがランキング表示されています。
 
 たとえばグラフを描くGemを探す場合は Graphics カテゴリの [Graphing](https://www.ruby-toolbox.com/categories/graphing) というページがあります。ここでグラフを描画するためのGemがランキング形式で紹介されています。説明文から用途にあったものを探したり、ランキングが上位のものをいくつか調べて利用すると良いでしょう。開発が活発かどうかを示す Development activity や Last commit 欄も有用な情報です。開発が止まると、RubyやRailsのバージョンアップに追随できなくなるリスクがあるためです。
+
+## まとめ
+
+ポイントをまとめます。
+
+- いろんなプログラムで共通で使える便利な公開されたプログラムをライブラリと呼ぶ
+- GemはRubyの世界のライブラリ
+- Gemをインストールするには gem i コマンド(gem install の省略形) を使う
+- Bundlerは複数のGemを簡単に管理する仕組み
+- BundlerではGemfileという名前のファイルに使用するGemを書く
+- Gemfileを作成しbundleコマンド(bundle installの省略形)を実行することでGem群をインストールする
+- bundleコマンドを実行するとGemfileに加えてGemfile.lockファイルが生成されるので、両方をソース管理対象にする
