Writing Books#create action in the model page.

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -226,6 +226,33 @@ DB設計図(migration)からDBを作るのが `rails db:migrate` コマンドで
 
 ![rails db migrate コマンドがmigrationからDBを作る](assets/model/kn/migration_rails_db_migrate.png)
 
+## 保存したあとの処理
+
+では、コントローラの処理の話に戻りましょう。`@book.save` した後の動作を見て行きます。以下の2.本のデータを保存する処理のあと、保存の結果が成功か失敗かによって処理が分岐します。成功した場合は 3a.show画面へ、失敗した場合は 3b. 失敗したらnew画面へ分岐します。
+
+![BooksController create アクション](assets/model/kn/create-overview.png)
+
+プログラムが少し長いので、着目するところだけ残して短くしましょう。まず、 `respond_to do |format|` はリクエストされたレスポンスの形式によって分岐させる文です。ブラウザでnew画面に内容を入力してリクエストを飛ばした場合は `format.html` が選ばれます。(もう一方のjsonはデータ形式の1つで、たとえばスマートフォンアプリ開発時など、ブラウザ以外で表示させる場合に利用されます) formatに関する処理を除くと以下のようになります。
+
+```ruby
+@book = Book.new(book_params)
+if @book.save
+  redirect_to @book, notice: 'Book was successfully created.'
+else
+  render :new
+end
+```
+
+`@book.save` は成功すると true 、失敗すると false を返します。 `@book.save` の前に書いてある if は分岐のための命令です。if のあとに続く文(ここでは `@book.save` )がtrueのときはその後ろからelseの前までを、falseのときはelse以降endまでを実行します。
+
+`@book.save` に成功すると `redirect_to @book, notice: 'Book was successfully created.'` が実行されます。保存した本の詳細ページ(BooksControllerのshowアクションになります)を表示します。 redirect_to はリダイレクト(新たにリクエストを発行して画面遷移させる)指示で、ここではshowアクションへのリクエストが発生します。後ろの notice 部は画面に表示させる文を設定しています。
+
+![リダイレクト後のshowアクション画面とnoticeの表示](assets/model/redirect_to_show.png)
+
+`@book.save` に失敗した場合はfalseを返すので、if文のelse節、 `render :new` が実行されます。renderはコントローラの次の処理であるビューを指定するための文です。ここでは `app/views/books/new.html.erb` がビューとして使われ、新規入力画面(入力していたページです)が表示されます。
+
+失敗する理由としてはDBへの接続エラーなどもありますが、モデルにある検証機能「バリデーション」を使うと想定外の入力に対して保存を失敗させることができます。たとえば、郵便番号入力欄に数字以外の文字が入力されるようなケースは、バリデーションを実装することで入力画面へ戻しユーザーへ再入力を促すことができます。バリデーションについてはここでは説明しませんが、便利な機能なので [Rails Guides : Active Record バリデーション](http://railsguides.jp/active_record_validations.html) などの説明を参考に使ってみてください。
+
 ## まとめ
 
 ### scaffold で作られる model, migration
