Update ruby and rails in cloud9

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -140,9 +140,7 @@ $ rails server -b $IP -p $PORT
 
 クラウドで開発できるCloud9 はマシンを変えても同じ環境で開発でき、ブラウザが使える環境であればどの端末からでも開発できるというメリットがあります。一方でネットに接続していないと開発できないことや、Cloud9がサービスを止めてしまうと継続して使えないというデメリットもあります。
 
-以下の手順は少し難しい内容になりますので、読み飛ばしても大丈夫です。
-
-RubyとRailsについて、そのままのバージョンで利用していただいても大丈夫ですが、もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。(rvm を利用しているので、rvmでの通常の作法でバージョンアップ可能です。)
+2016年2月現在でCloud9に最初からインストールされているバージョンはRuby2.2.1、Rails4.2.4です。RubyとRailsについて、そのままのバージョンで利用していただいても本書の内容は実行できますが、もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。少し難しい内容になりますので、はじめての方は初期状態で利用する方が簡単です。(Rubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です。)
 
 ```console
 $ rvm get stable
@@ -151,7 +149,14 @@ $ rvm install 2.3.0
 
 インストール後、Railsアプリのルートフォルダへ .ruby-version を作成し、`2.3.0` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
 
-Rails のバージョンを上げたい場合はRailsプロジェクト内の Gemfile 中の `gem 'rails', '5.0.0'` のバージョンを上げて `bundle update` コマンドを実行するか、`gem update rails` コマンドで環境に入っているrailsをバージョンアップすることができます。
+Rubyを新規インストールした場合は、そのあとで必要なGemライブラリをインストールします。
+
+```console
+$ gem i bundler
+$ gem i rails
+```
+
+Rails のバージョンを上げたい場合はRailsプロジェクト内の Gemfile 中の `gem 'rails', '5.0.0'` のバージョンを上げて `bundle update` コマンドを実行するか、`gem i rails`したあとでrails newコマンドを使って新しいRailsアプリを作成してください。
 
 ### ローカルに開発環境を作る - mac の場合
 
