Replace rails server to rails s

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -86,13 +86,13 @@ end
 ### ターミナルコマンドの書式例
 
 ```bash
-rails server
+rails s
 ```
 
 ### ターミナルの実行結果の書式例
 
 ```console
-$ rails server
+$ rails s
 => Booting Puma
 => Rails 5.0.0.beta1 application starting in development on http://localhost:3000
 => Run `rails server -h` for more startup options
@@ -130,10 +130,10 @@ Puma 2.15.3 starting...
 
 ワークスペースを作成する際に、テンプレートとしてRuby on Rails Tutorialを選ぶと、この資料の範囲が終わったあとで、次のステップとなる資料Rais Tutorialを利用することもできるのでお勧めです。画面は3ペインのIDEになっていて、ファイルエクスプローラ、ファイルエディタ、ターミナルを利用することができます。ターミナルからはgitコマンドも利用できるので、githubでソース管理することも可能です。
 
-ローカルでの開発と違うのは、rails serverコマンドと、そこへのアクセス方法です。rails serverコマンドを実行する際は、以下のように-b, -pオプションを指定する必要があります。
+ローカルでの開発と違うのは、rails sコマンド（rails serverの略）と、そこへのアクセス方法です。rails sコマンドを実行する際は、以下のように-b, -pオプションを指定する必要があります。
 
 ```console
-$ rails server -b $IP -p $PORT
+$ rails s -b $IP -p $PORT
 ```
 
 また、起動したWebサーバへのアクセスは、ローカルに環境を作った場合と異なり、上部メニューにあるPreview - Preview Running Applicationからアクセスします。
