--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -39,10 +39,8 @@ categories:
 
 プログラミングの世界、Webの世界は広大です。本書ではHTML（ブラウザで表示するための言語）とCSS（HTMLと一緒に使う、装飾するための言語）については最低限の説明のみにとどめています。HTMLとCSSについて学びたい方は、たとえば以下の情報が分かり易いです。
 
-- ドットインストール　HTML入門
-  - http://dotinstall.com/lessons/basic_html_v2
-- ドットインストール　CSS入門
-  - http://dotinstall.com/lessons/basic_css_v2
+- [ドットインストール　HTML入門](http://dotinstall.com/lessons/basic_html_v3)
+- [ドットインストール　CSS入門](http://dotinstall.com/lessons/basic_css_v3)
 
 もしもあなたがデザイナーであり、HTMLコーディングはおてのもの、という場合は大きなアドバンテージがあります。本書の知識と組み合わせることで鮮やかなWebアプリを作ることができるようになるでしょう。
 
@@ -86,8 +84,10 @@ end
 ### ターミナルコマンドの書式例
 
 ```bash
-rails s
+$ rails s
 ```
+
+先頭の$マークはターミナルを表す印です。入力する必要はありません。
 
 ### ターミナルの実行結果の書式例
 
@@ -116,10 +116,10 @@ Puma 2.15.3 starting...
 
 ※2016年2月現在、Rails5.0.0は正式リリース版がまだ出ていません。ベータリリース版（正式リリースへ向けての準備バージョン）であるRails 5.0.0.beta1が最新版です。正式リリース版が出る前にベータリリース版Rails5.0.0を使いたい場合は`gem install rails --pre`とインストールコマンドに`--pre`オプションを付けて実行します。また、本書の内容はRails 4.2でも同様に実行できますので、Rails 4.2をお使いいただいても大丈夫です。
 
-本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境として、3つの方法を書きました。どれか1つを選んで環境を作ってみましょう。簡単に開発を始めたい場合はクラウド開発環境をお勧めします。
+本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境として、3つの方法を書きました。どれか1つを選んで環境を作ってみましょう。簡単に開発を始めたい場合はクラウド開発環境をお勧めします。ローカルに開発環境を作る場合と比べて、トラブルなく開発をはじめることができます。
 
 - ブラウザだけで開発できるクラウド開発環境 - Cloud9
-- ローカルに開発環境を作る - macの場合
+- ローカルに開発環境を作る - Macの場合
 - ローカルに開発環境を作る - Windowsの場合
 
 また、ブラウザはお好きなものをご利用いただけますが、途中のデバッグの箇所で [Chrome](https://www.google.co.jp/chrome/browser/) の機能を例にして説明していますので、Chromeを使うと分かり易いです。
@@ -140,7 +140,7 @@ $ rails s -b $IP -p $PORT
 
 クラウドで開発できるCloud9はマシンを変えても同じ環境で開発でき、ブラウザが使える環境であればどの端末からでも開発できるというメリットがあります。一方でネットに接続していないと開発できないことや、Cloud9がサービスを止めてしまうと継続して使えないというデメリットもあります。
 
-2016年2月現在でCloud9に最初からインストールされているバージョンはRuby 2.2.1、Rails 4.2.4です。RubyとRailsについて、そのままのバージョンで利用していただいても本書の内容は実行できますが、もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。少し難しい内容になりますので、はじめての方は初期状態で利用する方が簡単です（Rubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です）。
+2016年2月現在でCloud9に最初からインストールされているバージョンはRuby 2.2.1、Rails 4.2.4です。RubyとRailsについて、そのままのバージョンで利用していただいても本書の内容は実行可能です。もしも、Rubyのバージョンを上げたい場合は以下の手順でバージョンアップできます。少し難しい内容になりますので、はじめての方は初期状態で利用する方が簡単です（Rubyの管理にrvmを利用しているので、rvmでの通常の作法でバージョンアップ可能です）。
 
 ```console
 $ rvm get stable
@@ -158,9 +158,9 @@ $ gem i rails
 
 Railsのバージョンを上げたい場合はRailsプロジェクト内のGemfile中の`gem 'rails', '5.0.0'`のバージョンを上げて`bundle update`コマンドを実行するか、`gem i rails`したあとでrails newコマンドを使って新しいRailsアプリを作成してください。
 
-### ローカルに開発環境を作る - macの場合
+### ローカルに開発環境を作る - Macの場合
 
-自分のmac上に開発環境を作る方法です。
+自分のMac上に開発環境を作る方法です。
 
 開発環境づくりに必要なxcodeツールをインストールします。
 
@@ -168,7 +168,7 @@ Railsのバージョンを上げたい場合はRailsプロジェクト内のGemf
 $ xcode-select --install
 ```
 
-homebrewをインストールします。homebrewはmacでさまざまな便利なものをインストール、管理するためのツールです。
+homebrewをインストールします。homebrewはMacでさまざまな便利なものをインストール、管理するためのツールです。
 
 ```console
 $ ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"
@@ -208,11 +208,11 @@ $ gem install rails
 
 ### ローカルに開発環境を作る - Windowsの場合
 
-Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで簡単に環境を構築することができます。インストーラをダウンロードして実行してください。
+Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで環境を構築することができます。インストーラをダウンロードして実行してください。
 
 ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定があわずにrailsコマンドやrubyコマンドが使えない場合があります。もしも想定通り動作しない場合、たとえばrailsコマンドを実行したときに「内部コマンドまたは外部コマンド、操作可能なプログラムまたはバッチファイルとして認識されていません」や「指定されたパスが見つかりません」と言われた場合は、上記のCloud9の利用することも検討してみてください。
 
-※2016年2月現在の最新パッケージは、Ruby 2.2.4, Rails 4.2という構成になっています。本書のコードはデフォルトのRailsInstallerの環境でも動作します。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
+※2016年2月現在の最新パッケージは、Ruby 2.2.4, Rails 4.2という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
 プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atomは無料で利用することができます（ライセンスはMITライセンスです）。
 
