fix errors by textlint

--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -12,7 +12,7 @@ categories:
 
 # Gemライブラリ
 
-この章ではGemについて説明します。前に出てきたGemfile や bundle コマンドについて説明をしていきます。
+この章ではGemについて説明します。前に出てきたGemfileやbundleコマンドについて説明をしていきます。
 
 ## Gemライブラリ
 
@@ -20,9 +20,9 @@ categories:
 
 Rubyの世界にもライブラリがあり、Gemと呼ばれます。Gemは [rubygems.org](https://rubygems.org) で公開されていて、10万を越えるGemが登録されています。
 
-## Gem をインストールして利用する
+## Gemをインストールして利用する
 
-Gem をインストールするには gem install コマンドを利用します。試しに awesome_print というGemをインストールしてみましょう。
+Gemをインストールするにはgem installコマンドを利用します。試しにawesome_printというGemをインストールしてみましょう。
 
 ```bash
 $ gem i awesome_print
@@ -32,9 +32,9 @@ Successfully installed awesome_print-1.6.1
 1 gem installed
 ```
 
-gem i の i は install の省略形です。省略せずに gem install と打っても実行することができます。コマンドを実行すると、上記のような表示が出てGemを使えるようになります。Gem名の後ろにハイフンで続く数字はバージョン名です。
+gem iのiはinstallの省略形です。省略せずにgem installと打っても実行することができます。コマンドを実行すると、上記のような表示が出てGemを使えるようになります。Gem名の後ろにハイフンで続く数字はバージョン名です。
 
-インストールした awesome_print は、きれいに表示する ap というメソッドを提供します。irbを起動して試しに使ってみましょう。irbは対話形式でRubyプログラムを実行できる仕組みです。rails console もirb を利用しています。
+インストールしたawesome_printは、きれいに表示するapというメソッドを提供します。irbを起動して試しに使ってみましょう。irbは対話形式でRubyプログラムを実行できる仕組みです。rails consoleもirbを利用しています。
 
 ```bash
 $ irb
@@ -56,17 +56,17 @@ $ irb
 => nil
 ```
 
-画面に色付きで配列[1,2,3]が表示されれば成功です。Rubyが標準で持っている p メソッドも同等のことができますが、 ap メソッドの方がきれいに読み易い形で表示してくれます。
+画面に色付きで配列[1,2,3]が表示されれば成功です。Rubyが標準で持っているpメソッドも同等のことができますが、apメソッドの方がきれいに読み易い形で表示してくれます。
 
-プログラムで最初に実行した `require "awesome_print"` はapを使えるようにするためのコードです。Gemライブラリは、gem install して、 require 文を実行することで利用できます。
+プログラムで最初に実行した`require "awesome_print"`はapを使えるようにするためのコードです。Gemライブラリは、gem installして、require文を実行することで利用できます。
 
-## Bundler と Gemfile
+## BundlerとGemfile
 
-Gemは前述のように、gem install コマンドで簡単にインストールすることが可能ですが、この方法でたくさんのGemをインストールしようとすると、Gemの数だけコマンドを打たなくてはいけません。それは大変なので、Gemを簡単に管理するBundlerという仕組みが用意されています。
+Gemは前述のように、gem installコマンドで簡単にインストールすることが可能ですが、この方法でたくさんのGemをインストールしようとすると、Gemの数だけコマンドを打たなくてはいけません。それは大変なので、Gemを簡単に管理するBundlerという仕組みが用意されています。
 
 BundlerでGem群をインストールするには2つの手順を踏みます。
 
-1つ目はGemfileという名前のファイルに使用するGemを書くこと。2つ目は bundle install コマンドを実行することです。仕組みの名前はBundler ですが、コマンド名は bundle と最後に r が付かない点に注意です。
+1つ目はGemfileという名前のファイルに使用するGemを書くこと。2つ目はbundle installコマンドを実行することです。仕組みの名前はBundlerですが、コマンド名はbundleと最後にrが付かない点に注意です。
 
 Railsアプリは最初からBundlerの仕組みを利用するようになっています。GemfileはRailsアプリの場合、Railsのルートフォルダに置いてあります。エディタで開いてみましょう。
 
@@ -81,14 +81,14 @@ gem 'sqlite3'
 ...
 ```
 
-Railsアプリは最初に作った状態で既に10個以上のgemが登録されています。ここに、さきほどの awesome_print gem を追加してみましょう。書く場所はどこでも良いのですが、`gem 'rails'` の次の行に書いてみます。
+Railsアプリは最初に作った状態ですでに10個以上のgemが登録されています。ここに、さきほどのawesome_print gemを追加してみましょう。書く場所はどこでも良いのですが、`gem 'rails'`の次の行に書いてみます。
 
 ```ruby
 gem 'rails', '>= 5.0.0.beta1', '< 5.1'
 + gem 'awesome_print'
 ```
 
-書いて保存したら、以下のように bundle install コマンドを実行します。ここで `bundle install`と書くことも、また、install を省略して `bundle` と書くこともできます。
+書いて保存したら、以下のようにbundle installコマンドを実行します。ここで`bundle install`と書くことも、また、installを省略して`bundle`と書くこともできます。
 
 ```console
 $ bundle
@@ -98,7 +98,7 @@ Bundle complete! 13 Gemfile dependencies, 67 gems now installed.
 Use `bundle show [gemname]` to see where a bundled gem is installed.
 ```
 
-これで awesome_print gem を使う準備は完了です。試しに rails console を起動して、apメソッドを使ってみましょう。
+これでawesome_print gemを使う準備は完了です。試しにrails consoleを起動して、apメソッドを使ってみましょう。
 
 ```console
 $ rails c
@@ -121,19 +121,19 @@ $ rails c
 => nil
 ```
 
-ターミナルに改行されて色がついて読み易く表示されているかと思います。Railsアプリの場合はrequire 文を書かなくても良いようになっているので、require 文を書く必要がありません。(ちなみに、書いても問題ありません。requireを複数実行すると、最初の1回だけが適切に実行されます。)
+ターミナルに改行されて色がついて読み易く表示されているかと思います。Railsアプリの場合はrequire文を書かなくても良いようになっているので、require文を書く必要がありません（ちなみに、書いても問題ありません。requireを複数実行すると、最初の1回だけが適切に実行されます）。
 
-また、Gemfileを変更してbundle コマンドを実行すると、Gemfile.lockが更新されます。Gemfile.lockは、簡単に言うと使用されたGem名とバージョン情報が記録されています。gitなどでソース管理をしている場合は、両方のファイルを追加して管理してください。
+また、Gemfileを変更してbundleコマンドを実行すると、Gemfile.lockが更新されます。Gemfile.lockは、簡単に言うと使用されたGem名とバージョン情報が記録されています。gitなどでソース管理をしている場合は、両方のファイルを追加して管理してください。
 
 ## Gemfileに書かれたGemのバージョンアップ
 
-各Gemは随時新しいバージョンがリリースされることがあります。Gemfileに書かれたGemの新しいバージョンをインストールしたい場合は `bundle update` コマンドを使います。実行すると、新しいバージョンのGemがある場合、バージョンアップしてGemfile.lock ファイルを自動で更新します。`bundle update` コマンドを実行すると、Gemfile中の全てのGemがバージョンアップ対象になり、新しいバージョンがあるGemはバージョンアップされます。
+各Gemは随時新しいバージョンがリリースされることがあります。Gemfileに書かれたGemの新しいバージョンをインストールしたい場合は`bundle update` コマンドを使います。実行すると、新しいバージョンのGemがある場合、バージョンアップしてGemfile.lockファイルを自動で更新します。`bundle update`コマンドを実行すると、Gemfile中のすべてのGemがバージョンアップ対象になり、新しいバージョンがあるGemはバージョンアップされます。
 
-特定のGemだけをバージョンアップしたい場合は、`bundle update Gem名` とGem名を添えて実行すればOKです。（この場合、指定したGemだけがバージョンアップされるのではなく、指定したGemが利用している他のGemがある場合は、セットでバージョンアップされます。）
+特定のGemだけをバージョンアップしたい場合は、`bundle update Gem名` とGem名を添えて実行すればOKです（この場合、指定したGemだけがバージョンアップされるのではなく、指定したGemが利用している他のGemがある場合は、セットでバージョンアップされます）。
 
 ## Gemfileでのバージョン指定
 
-利用するバージョンを指定したい場合は、Gemfileにバージョンを追記します。RailsアプリのGemfileを見ると、いくつかバージョンが既に指定してあるものがあります。
+利用するバージョンを指定したい場合は、Gemfileにバージョンを追記します。RailsアプリのGemfileを見ると、いくつかバージョンがすでに指定してあるものがあります。
 
 ```ruby
 gem 'uglifier', '>= 1.3.0'
@@ -149,11 +149,11 @@ gem 'coffee-rails', '~> 4.1.0'
 
 バージョンの表記の仕様は [Bundlerのページ](http://bundler.io/v1.11/gemfile.html) に解説されています。
 
-## Gem の探し方
+## Gemの探し方
 
 ある用途のGemで定番のものを探したい場合は、 ["The Ruby Toolbox"](https://www.ruby-toolbox.com/) というサイトが便利です。カテゴリーごとに、その用途のGemがランキング表示されています。
 
-たとえばグラフを描くGemを探す場合は Graphics カテゴリの [Graphing](https://www.ruby-toolbox.com/categories/graphing) というページがあります。ここでグラフを描画するためのGemがランキング形式で紹介されています。説明文から用途にあったものを探したり、ランキングが上位のものをいくつか調べて利用すると良いでしょう。開発が活発かどうかを示す Development activity や Last commit 欄も有用な情報です。開発が止まると、RubyやRailsのバージョンアップに追随できなくなるリスクがあるためです。
+たとえばグラフを描くGemを探す場合はGraphicsカテゴリの [Graphing](https://www.ruby-toolbox.com/categories/graphing) というページがあります。ここでグラフを描画するためのGemがランキング形式で紹介されています。説明文から用途にあったものを探したり、ランキングが上位のものをいくつか調べて利用すると良いでしょう。開発が活発かどうかを示すDevelopment activityやLast commit欄も有用な情報です。開発が止まると、RubyやRailsのバージョンアップに追随できなくなるリスクがあるためです。
 
 ## まとめ
 
@@ -161,8 +161,8 @@ gem 'coffee-rails', '~> 4.1.0'
 
 - いろんなプログラムで共通で使える便利な公開されたプログラムをライブラリと呼ぶ
 - GemはRubyの世界のライブラリ
-- Gemをインストールするには gem i コマンド(gem install の省略形) を使う
+- Gemをインストールするにはgem iコマンド（gem installの省略形）を使う
 - Bundlerは複数のGemを簡単に管理する仕組み
 - BundlerではGemfileという名前のファイルに使用するGemを書く
-- Gemfileを作成しbundleコマンド(bundle installの省略形)を実行することでGem群をインストールする
+- Gemfileを作成しbundleコマンド（bundle installの省略形）を実行することでGem群をインストールする
 - bundleコマンドを実行するとGemfileに加えてGemfile.lockファイルが生成されるので、両方をソース管理対象にする
