--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -23,7 +23,7 @@ categories:
 
 ## 本書の目的
 
-本書の目的の1つはWebアプリ作成のための便利なフレームワークRuby on Rails（以下、Railsと略します）を使って、写真や文書を投稿できるミニブログアプリを題材に実際に作って動かし、その仕組みを学ぶことです。Webアプリケーションがどういうものなのか、何ができるのか、どのような仕組みで動いているのかを説明していきます。できるだけ簡単なサンプルアプリを用意し、その仕組みを説明することで、RailsおよびWebアプリの基礎を説明していきます。
+本書の目的の1つはWebアプリ作成のための便利なフレームワークRuby on Rails（以下、Railsと略します）を使い、写真や文書を投稿できるミニブログアプリを題材として実際に作って動かし、その仕組みを学ぶことです。Webアプリケーションがどういうものなのか、何ができるのか、どのような仕組みで動いているのかを説明していきます。できるだけ簡単なサンプルアプリを用意し、その仕組みを説明することで、RailsおよびWebアプリの基礎を説明していきます。
 
 また、本書の目的のもう1つは、世の中にあるたくさんの情報を読むために前提となる基礎知識を身につけることです。Railsを学ぶための良い資料として、[RailsGuides](http://railsguides.jp/) や [RailsTutorial](http://railstutorial.jp/) があります。本書を読み進めると、これらの資料を読み進めるための基礎知識が身についてきます。実践的なRailsアプリを作るために必要なさまざまな資料を読むための入り口として本書はあります。
 
@@ -35,7 +35,7 @@ categories:
 - Webプログラミングは初めてである
 - Railsプログラミングは初めてである
 
-プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した2年間の一橋大学社会学部での講義資料をもとに書いています。講義はプログラミングは初めてである学生さんが多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
+プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した2年間の一橋大学社会学部での講義資料をもとに書いています。講義では初めてプログラムを書く学生さんが多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
 
 プログラミングの世界、Webの世界は広大です。本書ではHTML（ブラウザで表示するための言語）とCSS（HTMLと一緒に使う、装飾するための言語）については最低限の説明のみにとどめています。HTMLとCSSについて学びたい方は、たとえば以下の情報が分かり易いです。
 
@@ -210,7 +210,7 @@ $ gem install rails
 
 Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで環境を構築することができます。インストーラをダウンロードして実行してください。
 
-ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定があわずにrailsコマンドやrubyコマンドが使えない場合があります。もしも想定通り動作しない場合、たとえばrailsコマンドを実行したときに「内部コマンドまたは外部コマンド、操作可能なプログラムまたはバッチファイルとして認識されていません」や「指定されたパスが見つかりません」と言われた場合は、上記のCloud9の利用することも検討してみてください。
+ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定があわずにrailsコマンドやrubyコマンドを使えない場合があります。もしも想定通り動作しない場合、たとえばrailsコマンドを実行したときに「内部コマンドまたは外部コマンド、操作可能なプログラムまたはバッチファイルとして認識されていません」や「指定されたパスが見つかりません」と言われた場合は、上記のCloud9の利用することも検討してみてください。
 
 ※2016年2月現在の最新パッケージは、Ruby 2.2.4, Rails 4.2という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
