Apply reviews by kanimiso-san

--- a/_posts/2016-02-17-postface.md
+++ b/_posts/2016-02-17-postface.md
@@ -40,7 +40,7 @@ Railsの入門書籍です。基礎的な内容を丁寧に説明しています
 - パーフェクトRuby on Rails
   - ISBN: 978-4774165165
 
-Railsの基礎から応用まで網羅した書籍です。実際にRailsでプロダクトを作っている著者陣がそのノウハウを踏まえて体系的にRailsを解説しています。サンプルアプリを手を動かして作ることができるのも良いところです。初級者から中級者へのステップアップに。筆者が務めている会社ではこの本で読書会をしました。名著です。Rails4.1準拠。
+Railsの基礎から応用まで網羅した書籍です。実際にRailsでプロダクトを作っている著者陣がそのノウハウを踏まえて体系的にRailsを解説しています。サンプルアプリを手を動かして作ることができるのも良いところです。初級者から中級者へのステップアップに。筆者が勤めている会社ではこの本で読書会をしました。名著です。Rails4.1準拠。
 
 また、RailsはRubyというプログラミング言語で作られています。Rubyの知識を学ぶことで、より内容を理解し、自分が書く内容を豊かにできます。
 
