fix collapse design

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -139,7 +139,7 @@ Running via Spring preloader in process 83236
       create    app/assets/stylesheets/scaffold.css
 ```
 
-この中のroute（invoke resource_route）, controller（invoke scaffold_controller）やview（invoke erb）は前の章で説明したrailsの各役割を担うファイルです。
+この中のroute（`invoke resource_route`）, controller（`invoke scaffold_controller`）やview（`invoke erb`）は前の章で説明したrailsの各役割を担うファイルです。
 
 一方、ページの観点から見ると、scaffoldは次に示す新規作成、表示、更新、削除のための4つの画面と、画面のない3つの機能を生成します。
 
