Fix textlin in crud page

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -38,9 +38,8 @@ Use `bundle show [gemname]` to see where a bundled gem is installed.
 * bin/rails: spring inserted
 ```
 
-次に、以下のコマンドを実行します。
+次に、以下のコマンドを実行します（※Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` と実行してください）。
 
-（※Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` と実行してください。）
 
 ```bash
 cd books_app
@@ -218,7 +217,7 @@ class BooksController < ApplicationController
 
 @booksは@から始まる変数、インスタンス変数です。「一番小さなRailsアプリつくり」のところでも説明したように、インスタンス変数@booksを使っているのは、次に処理を行うviewで利用するためです。もしも、ここで変数をローカル変数booksにしてしまうと、コントローラの処理が終わったところでなくなってしまいます。
 
-また、@bookと単数形ではなく@booksと複数形になっているのはBook.allで取得するデータが複数の本のデータを格納した配列であることを示すためです。場合によっては、本のデータが1つしかない、あるいは0個である、という状況も考えられます。その場合も1個、あるいは0個のデータが格納された配列が取得されます。どのパターンも@booksは配列を指すため、変数名を複数形の@booksにするのが慣習です。細かいことのようですが、RailsやRubyでのプログラミングでは変数の複数形と単数形を意識して命名することは大切なことです。
+また、@bookと単数形ではなく@booksと複数形になっているのはBook.allで取得するデータが複数の本のデータを格納した配列であることを示すためです。場合によっては、本のデータが1つしかない、あるいは0個である、という状況も考えられます。その場合も1個、あるいは0個のデータを格納した配列が取得されます。どのパターンも@booksは配列を指すため、変数名を複数形の@booksにするのが慣習です。細かいことのようですが、RailsやRubyでのプログラミングでは変数の複数形と単数形を意識して命名することは大切なことです。
 
 コントローラのアクションでの処理が終わると、次はビューに処理が移ります。特に指定がない場合、`app/views/コントローラ名/アクション名`のviewファイルへ処理が移ります。ここでは`app/views/books/index.html.erb`です。
 
