Apply textlint messages in model page

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -31,7 +31,7 @@ end
 
 別の種類の変数として、前の章でも出てきたインスタンス変数（@はじまりの変数）があります。インスタンス変数は、インスタンスオブジェクトがなくなると一緒に消えます。Railsの場合は、1つのリクエスト内が有効範囲だと考えることができます（ここではおおまかに、ブラウザでのあるページを表示するのが1回のリクエストだと考えて差し支えありません。ですので、別のページを表示したり、リロードを行ったりすると、また新しい別のリクエストになります）。@bookのようなインスタンス変数に格納すると、コントローラからビューまで使うことができますが、その後なくなります。
 
-それでも、つくったRailsアプリは別のリクエストでも情報が見れますよね？　新規入力画面で自分で入力して一度登録してしまえば、その後ブラウザから何回アクセスしても、たとえば一覧画面で何回リロードしても表示されます。
+それでも、つくったRailsアプリは別のリクエストでも情報が見れますよね？　新規入力画面で情報を入力して一度登録してしまえば、その後ブラウザから何回アクセスしても、たとえば一覧画面で何回リロードしても表示されます。
 
 つまり、複数のリクエストに渡ってデータが保存されていることが分かります。これはインスタンス変数では実現できません。データがずっと残っているのは「データを保存する」仕事をしている「何かの仕組み」があるからなのです。
 
@@ -251,7 +251,7 @@ end
 
 `@book.save`に失敗した場合はfalseを返すので、if文のelse節、`render :new`が実行されます。renderはコントローラの次の処理であるビューを指定するための文です。ここでは`app/views/books/new.html.erb`がビューとして使われ、新規入力画面（入力していたページです）が表示されます。
 
-失敗する理由としてはDBへの接続エラーなどもありますが、モデルにある検証機能「バリデーション」を使うと想定外の入力に対して保存を失敗させることができます。たとえば、郵便番号入力欄に数字以外の文字が入力されるようなケースは、バリデーションを実装することで入力画面へ戻しユーザーへ再入力を促すことができます。バリデーションについてはここでは説明しませんが、便利な機能なので [Rails Guides : Active Record バリデーション](http://railsguides.jp/active_record_validations.html) などの説明を参考に使ってみてください。
+失敗する理由としてはDBへの接続エラーなどもありますが、モデルにある検証機能「バリデーション」を使うと想定外の入力に対して保存を失敗させることができます。たとえば、郵便番号入力欄に数字以外の文字が入力されるようなケースは、バリデーションを実装することで入力画面へ戻しユーザーに再入力を促すことができます。バリデーションについてはここでは説明しませんが、便利な機能なので [Rails Guides : Active Record バリデーション](http://railsguides.jp/active_record_validations.html) などの説明を参考に使ってみてください。
 
 ## まとめ
 
