Apply textlint messages in gem page

--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -16,7 +16,7 @@ categories:
 
 ## Gemライブラリ
 
-プログラミングの世界では便利なプログラム集がたくさん公開されています。いろんなプログラムで共通で使える便利な公開されたプログラムをライブラリと呼びます。RailsもWebアプリを簡単に作るライブラリの集合体です。
+プログラミングの世界では便利なプログラム集がたくさん公開されています。いろんなプログラムにて共通で使える便利な公開されたプログラムをライブラリと呼びます。RailsもWebアプリを簡単に作るライブラリの集合体です。
 
 Rubyの世界にもライブラリがあり、Gemと呼ばれます。Gemは [rubygems.org](https://rubygems.org) で公開されていて、10万を越えるGemが登録されています。
 
@@ -159,7 +159,7 @@ gem 'coffee-rails', '~> 4.1.0'
 
 ポイントをまとめます。
 
-- いろんなプログラムで共通で使える便利な公開されたプログラムをライブラリと呼ぶ
+- いろんなプログラムにて共通で使える便利な公開されたプログラムをライブラリと呼ぶ
 - GemはRubyの世界のライブラリ
 - Gemをインストールするにはgem iコマンド（gem installの省略形）を使う
 - Bundlerは複数のGemを簡単に管理する仕組み
