--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -153,6 +153,10 @@ ApplicationRecordはデータベースから情報を得て、Bookモデルにti
 
 ### データベースとは？
 
+データベースとは、データを保存したり、読み出したり、検索したりするために特化したプログラムです。
+
+モデルはDBを便利につかうための仕組みでもあります。DBは高機能で堅牢でかつ高速です。しかし、DBにアクセスするには 一般に専用の言語（SQLと言います）を用いることが多く、Rubyのコードからは扱いづらい面もあります。モデルはRubyでDBを容易に扱うことができる機能も提供します。
+
 ![データベースとは？](assets/model/kn/db.png)
 
 では、DBはいつのまに作られたのでしょう？
