refectering gem page

--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -125,7 +125,7 @@ $ rails c
 
 また、Gemfileを変更してbundleコマンドを実行すると、Gemfile.lockが更新されます。Gemfile.lockは、簡単に言うと使用されたGem名とバージョン情報が記録されています。gitなどでソース管理をしている場合は、両方のファイルを追加して管理してください。
 
-たとえ話で説明すると、Gemfileはgemをインストールするための指示書です。bundle installコマンドを実行すると、指示書に従ってgemがインストールされます。Gemfile.lockは納品書といったところでしょうか。指示書に基づいて実際にインストールされたgemのバージョン情報などが書かれています。
+たとえ話で説明すると、Gemfileはgemをインストールするための発注書です。bundle installコマンドを実行すると、発注書に従ってgemがインストールされます。Gemfile.lockは納品書です。発注書に基づいて実際にインストールされたgemのバージョン情報などが書かれています。
 
 ## Gemfileに書かれたGemのバージョンアップ
 
