use footnote in markdown

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -163,12 +163,14 @@ ApplicationRecordはデータベースから情報を得て、Bookモデルにti
 
 ## データベースはいつ作られたのか？
 
-books appを作る一連のコマンドを入力した際に、以下のコマンドでDBを作成していました（※Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` となります）。
+books appを作る一連のコマンドを入力した際に、以下のコマンドでDBを作成していました[^1]。
 
 ```console
 rails g scaffold book title:string memo:text
 rails db:migrate
 ```
+
+[^1]: Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` となります。
 
 scaffoldコマンドはいろいろなものを作りますが、その1つとしてDBの設計図をつくります。
 
