--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -112,9 +112,9 @@ Puma 2.15.3 starting...
 
 ## 開発環境
 
-本書はRuby 2.3.0およびRails 5.0.0beta1, Rails4.2で動作確認をしています。
+本書はRuby 2.3.0およびRails 5.0.0beta1[^1], Rails4.2で動作確認をしています。
 
-※2016年2月現在、Rails5.0.0は正式リリース版がまだ出ていません。ベータリリース版（正式リリースへ向けての準備バージョン）であるRails 5.0.0.beta1が最新版です。正式リリース版が出る前にベータリリース版Rails5.0.0を使いたい場合は`gem install rails --pre`とインストールコマンドに`--pre`オプションを付けて実行します。また、本書の内容はRails 4.2でも同様に実行できますので、Rails 4.2をお使いいただいても大丈夫です。
+[^1]: 2016年2月現在、Rails5.0.0は正式リリース版がまだ出ていません。ベータリリース版（正式リリースへ向けての準備バージョン）であるRails 5.0.0.beta1が最新版です。正式リリース版が出る前にベータリリース版Rails5.0.0を使いたい場合は`gem install rails --pre`とインストールコマンドに`--pre`オプションを付けて実行します。また、本書の内容はRails 4.2でも同様に実行できますので、Rails 4.2をお使いいただいても大丈夫です。
 
 本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境として、3つの方法を書きました。どれか1つを選んで環境を作ってみましょう。簡単に開発を始めたい場合はクラウド開発環境をお勧めします。ローカルに開発環境を作る場合と比べて、トラブルなく開発をはじめることができます。
 
@@ -210,9 +210,9 @@ $ gem install rails
 
 Windowsの場合は [RailsInstaller](http://railsinstaller.org) を利用することで環境を構築することができます。インストーラをダウンロードして実行してください。
 
-ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定があわずにrailsコマンドやrubyコマンドを使えない場合があります。もしも想定通り動作しない場合、たとえばrailsコマンドを実行したときに「内部コマンドまたは外部コマンド、操作可能なプログラムまたはバッチファイルとして認識されていません」や「指定されたパスが見つかりません」と言われた場合は、上記のCloud9の利用することも検討してみてください。
+ターミナルの起動はWindowsのアプリケーション選択から "Command Prompt with Ruby and Rails" を選んでください。通常のコマンドプロンプトを起動すると、環境変数の設定があわずにrailsコマンドやrubyコマンドを使えない場合があります。もしも想定通り動作しない場合、たとえばrailsコマンドを実行したときに「内部コマンドまたは外部コマンド、操作可能なプログラムまたはバッチファイルとして認識されていません」や「指定されたパスが見つかりません」と言われた場合は、上記のCloud9の利用することも検討してみてください[^2]。
 
-※2016年2月現在の最新パッケージは、Ruby 2.2.4, Rails 4.2という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
+[^2]: 2016年2月現在の最新パッケージは、Ruby 2.2.4, Rails 4.2という構成になっています。Railsはコマンドプロンプトから `gem update rails` コマンドで最新版にバージョンアップすることが可能です。しかし、Rubyのバージョンを上げるのは簡単ではないので、パッケージに入っているRubyをそのまま使うのが良いでしょう。最新バージョンのRubyおよびRailsを利用したい場合は、上記のCloud9の利用をお勧めします。
 
 プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Atom](https://github.com/atom/atom/blob/master/README.md#windows) をお勧めします。Atomは無料で利用することができます（ライセンスはMITライセンスです）。
 
