--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -38,7 +38,7 @@ Use `bundle show [gemname]` to see where a bundled gem is installed.
 * bin/rails: spring inserted
 ```
 
-次に、以下のコマンドを実行します（※Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` と実行してください）。
+次に、以下のコマンドを実行します[^1]。
 
 
 ```bash
@@ -74,6 +74,8 @@ Puma 2.15.3 starting...
 * Environment: development
 * Listening on tcp://localhost:3000
 ```
+
+[^1]: Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` と実行してください。
 
 ブラウザを起動して以下のURLを入力してアクセスしてみます。
 
