--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -75,7 +75,7 @@ source 'https://rubygems.org'
 
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '>= 5.0.0.beta1', '< 5.1'
+gem 'rails', '>= 5.0.0.beta3', '< 5.1'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 ...
@@ -83,8 +83,8 @@ gem 'sqlite3'
 
 Railsアプリは最初に作った状態ですでに10個以上のgemが登録されています。ここに、さきほどのawesome_print gemを追加してみましょう。書く場所はどこでも良いのですが、`gem 'rails'`の次の行に書いてみます。
 
-```ruby
-gem 'rails', '>= 5.0.0.beta1', '< 5.1'
+```diff
+gem 'rails', '>= 5.0.0.beta3', '< 5.1'
 + gem 'awesome_print'
 ```
 
@@ -92,10 +92,13 @@ gem 'rails', '>= 5.0.0.beta1', '< 5.1'
 
 ```console
 $ bundle
-Using rake 10.4.2
+Using rake 11.1.1
 ...
-Bundle complete! 13 Gemfile dependencies, 67 gems now installed.
+Bundle complete! 15 Gemfile dependencies, 63 gems now installed.
 Use `bundle show [gemname]` to see where a bundled gem is installed.
+         run  bundle exec spring binstub --all
+* bin/rake: spring inserted
+* bin/rails: spring inserted
 ```
 
 これでawesome_print gemを使う準備は完了です。試しにrails consoleを起動して、apメソッドを使ってみましょう。
