Add sentence for teacher in preface

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -34,6 +34,7 @@ categories:
 - プログラミングは初めてである
 - Webプログラミングは初めてである
 - Railsプログラミングは初めてである
+- Railsプログラミングを講義で教えたい
 
 プログラミングは初めての方も安心してください。プログラミングの世界へようこそ！本書は筆者が作成した2年間の一橋大学社会学部での講義資料をもとに書いています。講義では初めてプログラムを書く学生さんが多数派でした。学生さんたちがつまづいた箇所について補足をして、資料を加筆していきました。プログラミングが初めての方に読んでいただけるように、丁寧に説明をしていきます。
 
@@ -53,7 +54,9 @@ categories:
 
 もしもあなたが他の言語でプログラミングをした経験があれば、これも大きなアドバンテージです。特にJavaScript（ブラウザ上で広く使われているプログラミング言語）の経験がある方は、本書の知識をつかってインタラクティブで格好良いWebアプリを作ることができるようになるでしょう（本書ではJavaScriptについては説明しません）。Rubyの経験がある方は、本書の内容を越えた範囲について、いままでの知識をつかって早く成長することができるでしょう。
 
-逆に、本書の対象から外れるのは以下のような方です。
+Railsプログラミングを講義で教えたい方へ。本書はwebアプリがどういうものなのかを実際に手を動かしながら学ぶ構成になっています。実際の講義資料を元に書いており、講義はプログラミングが初めての学生さんらに向けて1回90分の講義約10回で行いました。その後、3回の講義時間を使って自由にwebアプリを作る実習を行ったところ、彼ら彼女らは自分で考えた実用的であったり、たのしさにあふれたりする、独創性のあるプログラムを作りあげて発表してくれました。本書はできるだけ易しく説明を進めますが、Rubyのことやshellのこと、プログラミングでしか使わない記号など、つまづいた際にはサポートの手を差し伸べられる環境を作っておくと順調に前に進めるようになります。
+
+本書の対象から外れるのは以下のような方です。
 
 - Railsの基礎はわかっている
 
