--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -96,11 +96,10 @@ $ rails s
 
 ```console
 => Booting Puma
-=> Rails 5.0.0.beta3 application starting in development on http://localhost:3000
+=> Rails 5.0.0 application starting in development on http://localhost:3000
 => Run `rails server -h` for more startup options
-=> Ctrl-C to shutdown server
 Puma starting in single mode...
-* Version 3.2.0 (ruby 2.3.0-p0), codename: Spring Is A Heliocentric Viewpoint
+* Version 3.4.0 (ruby 2.3.1-p112), codename: Owl Bowl Brawl
 * Min threads: 5, max threads: 5
 * Environment: development
 * Listening on tcp://localhost:3000
@@ -115,9 +114,9 @@ Use Ctrl-C to stop
 
 ## 開発環境
 
-本書はRuby 2.3.0およびRails 5.0.0beta3[^1], Rails4.2で動作確認をしています。
+本書はRuby 2.3.1およびRails 5.0, Rails4.2で動作確認をしています。
 
-[^1]: 2016年3月20日現在、Rails5.0.0は正式リリース版がまだ出ていません。ベータリリース版（正式リリースへ向けての準備バージョン）であるRails 5.0.0.beta3が最新版です。正式リリース版が出る前にベータリリース版Rails5.0.0を使いたい場合は`gem install rails --pre`とインストールコマンドに`--pre`オプションを付けて実行します。また、本書の内容はRails 4.2でも同様に実行できますので、Rails 4.2をお使いいただいても大丈夫です。
+[^1]: 2016年7月2日現在、Railsの最新バージョンは5.0.0です。本書の内容はRails 4.2でも同様に実行できますので、Rails 4.2をお使いいただいても大丈夫です。Rails4.2でRails5.0と異なる部分については、その都度補足していきます。
 
 本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。開発環境として、3つの方法を書きました。どれか1つを選んで環境を作ってみましょう。簡単に開発を始めたい場合はクラウド開発環境をお勧めします。ローカルに開発環境を作る場合と比べて、トラブルなく開発をはじめることができます。
 
@@ -147,10 +146,10 @@ $ rails s -b $IP -p $PORT
 
 ```console
 $ rvm get stable
-$ rvm install 2.3.0
+$ rvm install 2.3.1
 ```
 
-インストール後、Railsアプリのルートフォルダへ .ruby-versionを作成し、`2.3.0` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
+インストール後、Railsアプリのルートフォルダへ .ruby-versionを作成し、`2.3.1` といった具合にRubyのバージョンを書くと、そのアプリではこのファイルで指定したバージョンを使用することができます。
 
 Rubyを新規インストールした場合は、そのあとで必要なGemライブラリをインストールします。
 
@@ -190,13 +189,13 @@ $ source ~/.bash_profile
 rbenvを使ってRubyをインストールします。
 
 ```console
-$ rbenv install 2.3.0
+$ rbenv install 2.3.1
 ```
 
 installしたRubyを利用するように設定します。
 
 ```console
-$ rbenv global 2.3.0
+$ rbenv global 2.3.1
 ```
 
 以上でRubyのインストールは完了です。続いて、インストールしたRubyを使ってRailsをインストールします。
