Update model to Rails5.0.0

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -105,6 +105,8 @@ rails c
 ```
 
 ```console
+Running via Spring preloader in process 53813
+Loading development environment (Rails 5.0.0)
 irb(main):001:0> #ここにコードを入力します
 ```
 
@@ -141,7 +143,9 @@ Bookモデルにはコードがほとんどありません。
 
 ### 問 : saveやallといったメソッドが使えるのはなぜでしょうか？
 
-答えは `ApplicationRecord` クラスを継承しているからです。 `ApplicationRecord` クラスがモデルの仕事に必要な機能を持っています。それを継承しているBookクラスも同じ機能を持ちます（Rails 4.2の場合、`ApplicationRecord`の替わりに`ActiveRecord::Base`が使われていますが、考え方は同じです）。
+答えは `ApplicationRecord` クラスを継承しているからです。 `ApplicationRecord` クラスがモデルの仕事に必要な機能を持っています。それを継承しているBookクラスも同じ機能を持ちます。[^1]
+
+[^1]: Rails 4.2の場合、`ApplicationRecord`の替わりに`ActiveRecord::Base`が使われていますが、考え方は同じです。
 
 ### 問 : titleやmemoといった要素があることをどこで知るのでしょうか？
 
@@ -163,14 +167,14 @@ ApplicationRecordはデータベースから情報を得て、Bookモデルにti
 
 ## データベースはいつ作られたのか？
 
-books appを作る一連のコマンドを入力した際に、以下のコマンドでDBを作成していました[^1]。
+books appを作る一連のコマンドを入力した際に、以下のコマンドでDBを作成していました[^2]。
 
 ```console
 rails g scaffold book title:string memo:text
 rails db:migrate
 ```
 
-[^1]: Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` となります。
+[^2]: Rails4.2以前では `rails db:migrate` の替わりに `bin/rake db:migrate` となります。
 
 scaffoldコマンドはいろいろなものを作りますが、その1つとしてDBの設計図をつくります。
 
