Specify Rails version in preface page

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -114,7 +114,7 @@ Use Ctrl-C to stop
 
 ## 開発環境
 
-本書はRuby 2.3.1およびRails 5.0, Rails4.2で動作確認をしています。
+本書はRuby 2.3.1と、Rails 5.0.0およびRails4.2.4で動作確認をしています。
 
 [^1]: 2016年7月2日現在、Railsの最新バージョンは5.0.0です。本書の内容はRails 4.2でも同様に実行できますので、Rails 4.2をお使いいただいても大丈夫です。Rails4.2でRails5.0と異なる部分については、その都度補足していきます。
 
